user model update

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,8 @@
   "name": "backend-for-mithila",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
     "build": "npm install && npm run start"
