gallery, category model

--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,11 @@ MONGODB_URI=mongodb+srv://akshay:akshay123@cluster0.kc5quoo.mongodb.net
 PORT = 8000
 CORS_ORIGIN =*
 
+ACCESS_TOKEN_SECRET = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.e30.Et9HFtf9R3GEMA0IICOfFMVXY7kkTX1wr4qCyhIf58U
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_SECRET = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.e30.Et9HFtf9R3GEMA0IICOfFMVXY7kkTX1wr4qCyhIf58U
+REFRESH_TOKEN_EXPIRY = 7d
+
 
 CLOUDINARY_CLOUD_NAME = "dnquru5zj"
 CLOUDINARY_API_KEY = "412977772341533"
