--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 MONGODB_URI=mongodb+srv://akshay:akshay123@cluster0.kc5quoo.mongodb.net
 PORT = 5000
-CORS_ORIGIN =*
+CORS_ORIGIN =http://localhost:5173
 
 ACCESS_TOKEN_SECRET = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.e30.Et9HFtf9R3GEMA0IICOfFMVXY7kkTX1wr4qCyhIf58U
 ACCESS_TOKEN_EXPIRY = 1d
